# tephra

./: Cargo.toml  rustfmt.toml
.undodir/: %home%maik%projects%tephra%tephra%src%framegraph%mod.rs
backend/vulkan/: Cargo.toml
backend/vulkan/src/: buffer.rs  commandbuffer.rs  descriptor.rs  image.rs  lib.rs  pipeline.rs  renderpass.rs  shader.rs  swapchain.rs
demo/: Cargo.toml
demo/shader/triangle/: frag.spv  triangle.frag
demo/src/: main.rs
examples/: Cargo.toml  conf.cap  graph.dot  graph.dot.dot  graph.dot.ps  nobug  output  s.sh  withbug
examples/shader/triangle/: comp.spv  frag.spv  single-branch.comp  triangle.frag
examples/src/: main.rs
tephra/: Cargo.toml
tephra-derive/: Cargo.toml
tephra-derive/src/: lib.rs
tephra/src/: buffer.rs  commandbuffer.rs  context.rs  descriptor.rs  framegraph.rs  image.rs  lib.rs  passes.rs  pipeline.rs  reflect.rs  render.rs  renderpass.rs  shader.rs  swapchain.rs
tephra/src/backend/: mod.rs
tephra/src/backend/vulkan/: buffer.rs  commandbuffer.rs  descriptor.rs  image.rs  mod.rs  pipeline.rs  render.rs  renderpass.rs  shader.rs  swapchain.rs
tephra/src/framegraph/: blackboard.rs  mod.rs  render_task.rs  task_builder.rs
