[package]
name = "tephra"
version = "0.1.0"
authors = ["maik"]

[dependencies]

failure = "0.1.2"
failure_derive = "0.1.2"
serde = "1.0.70"
ash = {git = "https://github.com/MaikKlein/ash.git", branch="generator"}
winit = "0.11"
enumflags = "0.4.1"
enumflags_derive = "0.4.1"
thread-local-object = "0.1.0"
parking_lot = "0.6.3"
futures = "0.1"
downcast-rs = "1.0"
