[package]
name = "tephra"
version = "0.1.0"
authors = ["maik"]
edition = "2018"

[dependencies]
derive_builder = "0.7"
failure = "0.1.2"
failure_derive = "0.1.2"
serde = "1.0.70"
ash = "0.29"
winit = "0.17"
thread-local-object = "0.1.0"
parking_lot = "0.6.3"
futures = "0.1"
downcast-rs = "1.0"
petgraph = "0.4"
anymap = "0.12"
image = "0.19"
rspirv = "0.5"
spirv_headers = "1.3"
smallvec = "0.6"
itertools = "0.8"
bitflags = "1.0"
generational-arena = "0.2"
